ocaml/testsuite/tests/pattern-guards/seq_bad.compilers.reference
File "seq_bad.ml", line 13, characters 25-30:
13 |   | Some x when f x; g x match Some y -> y
                              ^^^^^
Error: Syntax error
